# camera-imu-localization

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: csv_utils.h  eskf.h
cpp/src/: eskf.cpp  main.cpp
python/: explore_data.py  feature_tracker.py  plot_comparison.py  plot_trajectory.py  plot_vo_trajectory.py  simulate_gps.py
